--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -27,4 +27,8 @@
     background:skyblue;
     cursor: pointer;
 }
+.h3 {
+    color:navy;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
 
