--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,19 +1,18 @@
-
 .block {
     grid-area: h;
     height: 200px;
     display: flex;
-    align-items: left;
-    justify-content: left;
- }
-.block .h1 {
-    text-align:left;
+    justify-content: space-between;
+  }
+  .block .h1 {
+    text-align: left;
     color: navy;
     font-family: Impact;
     font-size: 100px;
     line-height: 80px;
-}
-
-.block .img {
+    margin: 20px 0px 0px 20px;
+  }
+  
+  .block .img {
     width: 800px;
-}
+  }
