--- a/src/components/Leagues/Leagues.module.scss
+++ b/src/components/Leagues/Leagues.module.scss
@@ -1,11 +1,36 @@
 .block {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: navy;
-    font-size: large;
-    text-align: center;
+    font-size: medium;
+    text-align: left;
 }
-
+.blocks {
+    font-family: cursive;
+    color: navy;
+    font-size: medium;
+    text-align: left;
+}
 .search {
     width: 200px;
     color: navy;
 }
+.img {
+    width: 50px;
+    margin-left: 20px;
+}
+
+.league_container {
+ display: flex;
+ flex-direction: column;
+ margin-top: 30px;
+ }
+
+ .league_row{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+margin-bottom: 10px;
+font-size: 16px;
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+color:navy;
+ }
