--- a/src/components/Teams/Teams.module.scss
+++ b/src/components/Teams/Teams.module.scss
@@ -9,3 +9,22 @@
     width: 200px;
     color: navy;
 }
+.teams_container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    }
+
+.team_row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:navy;
+        }
+.img {
+    width: 50px;
+    margin-left: 80px;
+}
