--- a/src/components/leagueCalendar/LeaguesCalendar.module.scss
+++ b/src/components/leagueCalendar/LeaguesCalendar.module.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     margin-bottom: 10px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact;
     color: navy;
     font-size: medium;
     text-align: left;
@@ -24,7 +24,7 @@
     flex-direction: row;
     justify-content: flex-start;
     margin-bottom: 30px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact;
     color: navy;
     font-size: medium;
     text-align: left;
