--- a/src/components/Leagues/Leagues.module.scss
+++ b/src/components/Leagues/Leagues.module.scss
@@ -1,5 +1,5 @@
 .block {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact;
     color: navy;
     font-size: medium;
     text-align: left;
@@ -22,19 +22,17 @@
     width: 50px;
     margin-left: 80px;
 }
-
 .league_container {
  display: flex;
  flex-direction: column;
  margin-top: 30px;
- }
-
- .league_row{
+}
+.league_row{
 display: flex;
 flex-direction: row;
 justify-content: space-between;
 margin-bottom: 10px;
 font-size: 16px;
-font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-family: Impact;
 color:navy;
- }
+}
