--- a/src/components/Teams/Teams.module.scss
+++ b/src/components/Teams/Teams.module.scss
@@ -1,5 +1,5 @@
 .block {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact;
     color: navy;
     font-size: large;
     text-align: center;
@@ -21,7 +21,7 @@
     justify-content: space-between;
     margin-bottom: 10px;
     font-size: 16px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact;
     color:navy;
         }
 .img {
