--- a/src/components/navbar/SelectYearGroup/SelectYearGroup.module.scss
+++ b/src/components/navbar/SelectYearGroup/SelectYearGroup.module.scss
@@ -4,7 +4,7 @@
 }
 .h3 {
   color: navy;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact;
   margin-right: 10px;
   text-align: end;
   line-height: 15px;
