--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -1,12 +1,13 @@
 .block {
     grid-area: n;
     display: flex;
-    align-self: center;
-    justify-content: center;
+    flex-direction: row;    
+    margin: 0px 0px 0px 20px;
+    justify-content: center;      
+
   }
   .block__buttons {
     display: flex;
-    font-size: 150px;
   }
   .block .button {
     border-radius: 50px;
@@ -20,8 +21,9 @@
     font-size: 16px;
     line-height: 20px;
     cursor: pointer;
-    margin: 0px 5px 0px 5px;
+    margin: 0px 5px 5px 0px;
     outline: none;
+    vertical-align: middle;
   }
   .block .button:hover {
     background: cornflowerblue;
@@ -31,4 +33,17 @@
     background: skyblue;
     cursor: pointer;
     outline: none;
+  }
+  @media (max-width: 720px) {
+    .block {
+      flex-direction: column;
+    }
+    .block .button {
+      border-radius: 20px;
+      width: 120px;
+      height: 30px;
+      border-width: 3px;
+      font-size: 12px;
+      line-height: 10px;
+    }
   }
