--- a/src/components/Leagues/Leagues.module.scss
+++ b/src/components/Leagues/Leagues.module.scss
@@ -1,9 +1,3 @@
-.block {
-    font-family: Impact;
-    color: navy;
-    font-size: medium;
-    text-align: left;
-}
 .blocks {
     display: flex;
     flex-direction: row;
@@ -32,7 +26,21 @@ display: flex;
 flex-direction: row;
 justify-content: space-between;
 margin-bottom: 10px;
-font-size: 16px;
+font-size: medium;
 font-family: Impact;
 color:navy;
 }
+
+@media (max-width: 360px) {
+    .blocks {
+        font-size: small;
+    }
+    .league_row{
+        font-size: small;
+    }
+    .img {
+        width: 30px;
+        height: 20px;
+        margin-left: 30px;
+    }
+  }
