--- a/src/components/teamCalendar/TeamsCalendar.module.scss
+++ b/src/components/teamCalendar/TeamsCalendar.module.scss
@@ -3,28 +3,17 @@
     flex-direction: column;
     justify-content: space-between;
     margin-bottom: 10px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact;
     color: navy;
     font-size: medium;
     text-align: left;
 }
-.m {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 10px;
-    font-family: cursive;
-    color: navy;
-    font-size: medium;
-    text-align: left;
-}
-
 .top_row {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     margin-bottom: 30px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact;
     color: navy;
     font-size: medium;
     text-align: left;
@@ -32,18 +21,38 @@
 
 .search {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: left;
     color: navy;
     margin-right: 30px;
-}
-.img {
-    width: 100px;
 }
 .h1 {
     color: navy;
 }
 
-.date{
-    font-size: small;
+@media (max-width: 720px) {
+    .block {
+        font-size: small;
+    }
+    .search {
+        margin-right: 5px;     
+        margin-right: 50px;
+        flex-direction: row;
+    }
+    .top_row {
+        font-size: small;
+        flex-direction: column;
+    }
+}
+@media (max-width: 360px) {
+        .block {
+        font-size: small;
+        }
+        .top_row {
+            flex-direction: column;
+            font-size: small;
+        }
+        .search {
+            flex-direction: column;
+        }
 }
